1. Hotfix: Initiate trade with a list of sums.